Uploaded image for project: 'Core Server'
  1. Core Server
  2. SERVER-37380

Coverity analysis defect 105056: Uninitialized scalar field

    • Type: Icon: Bug Bug
    • Resolution: Fixed
    • Priority: Icon: Major - P3 Major - P3
    • 4.1.4
    • Affects Version/s: None
    • Component/s: Storage
    • Labels:
    • Fully Compatible
    • ALL
    • Storage NYC 2018-10-08

      A scalar field is not initialized by the constructor

      Defect 105056 (STATIC_C)
      Checker UNINIT_CTOR (subcategory none)
      File: /src/mongo/db/storage/biggie/biggie_kv_engine.h
      Function mongo::biggie::KVEngine::KVEngine()
      /src/mongo/db/storage/biggie/biggie_kv_engine.h, line: 155
      Class member declaration for "_cachePressureForTest".

              int _cachePressureForTest;
      

      /src/mongo/db/storage/biggie/biggie_kv_engine.h, line: 52
      Non-static class member "_cachePressureForTest" is not initialized in this constructor nor in any functions that it calls.

              KVEngine() : ::mongo::KVEngine() {}
      

            Assignee:
            gregory.wlodarek@mongodb.com Gregory Wlodarek
            Reporter:
            xgen-internal-coverity Coverity Collector User
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: