SERVER-37380 Fix uninitialized scalar field